# rust-on-android

./: README.md  build-all.sh  build-apk.sh  build-librpn.sh
android/app/src/main/java/pl/svgames/blog/RustOnAndroid/: MainActivity.java  RpnCalculator.java
android/app/src/main/res/values/: strings.xml
rust/: Cargo.toml
rust/src/: android.rs  lib.rs  main.rs
